# IT5423-DistributedParalellTraining

./: .gitignore  KAGGLE_GUIDE.md  PROJECT_PLAN.md  README.md  SLIDES_GUIDE.md  pyproject.toml  requirements-kaggle.txt
bench/: aggregate_results.py  make_docx.py  plot_analysis.py  plots.py  run_kaggle.sh  run_sweep.sh
configs/: ds_pp.json
results/: loss_curves.csv  results.csv  summary.csv
results/runs/: deepspeed_1f1b_M16_2026-06-26_133412.json  deepspeed_1f1b_M1_2026-06-26_132539.json  deepspeed_1f1b_M2_2026-06-26_132703.json  deepspeed_1f1b_M4_2026-06-26_132843.json  deepspeed_1f1b_M8_2026-06-26_133056.json  deepspeed_1f1b_M8_2026-06-26_162248.json  singlegpu_grad_ckpt_M8_2026-06-26_131058.json  singlegpu_grad_ckpt_M8_2026-06-26_155743.json  torchpp_1f1b_M16_2026-06-26_131725.json  torchpp_1f1b_M2_2026-06-26_131224.json  torchpp_1f1b_M4_2026-06-26_131326.json  torchpp_1f1b_M8_2026-06-26_125615.json  torchpp_1f1b_M8_2026-06-26_131456.json  torchpp_1f1b_M8_2026-06-26_160946.json  torchpp_gpipe_M2_2026-06-26_131834.json  torchpp_gpipe_M4_2026-06-26_131939.json  torchpp_interleaved_1f1b_M8_2026-06-26_132133.json  torchpp_interleaved_zb_M8_2026-06-26_132303.json  torchpp_zbv_M8_2026-06-26_132430.json
src/: __init__.py  check_split.py  data.py  losses.py  metrics.py  model_split.py  optim.py  train_deepspeed.py  train_fsdp.py  train_singlegpu.py  train_torchpp.py  utils.py
